force https on cdnjs.cloudflare.com

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -123,13 +123,13 @@
         </p>
       </div>
     </footer>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js" defer></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js" defer></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-dropdown.min.js" defer></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-tooltip.min.js" defer></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js" defer></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/algoliasearch/3.10.2/algoliasearch.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-dropdown.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-tooltip.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/algoliasearch/3.10.2/algoliasearch.min.js" defer></script>
   <script src="/js/main.js" defer></script>
 
     <script src="//static.getclicky.com/js" defer></script>
@@ -153,7 +153,7 @@ $('.post > pre > code').wrapInner('<div class="container"><div class="row"><div 
 $('.post code').addClass('hljs');
 $('.post').show();
     </script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
 
 <script defer>hljs.initHighlightingOnLoad();</script>
 <script defer>
