include "app-loading" library

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/theme.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/app-loading/0.0.51/app-loading.min.css">
     <link rel="dns-prefetch" href="//cdn.carbonads.com" />
     <link rel="dns-prefetch" href="//goo.gl" />
   </head>
@@ -129,6 +130,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-tooltip.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/algoliasearch/3.10.2/algoliasearch.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/app-loading/0.0.51/app-loading.min.js"></script>
   <script src="/js/main.js" defer></script>
 
     <script src="//static.getclicky.com/js" defer></script>
