use "pace" have progress of page loading

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,12 +26,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/theme.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/orange/pace-theme-minimal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/app-loading/0.0.51/app-loading.min.css">
     <link rel="dns-prefetch" href="//cdn.carbonads.com" />
     <link rel="dns-prefetch" href="//goo.gl" />
   </head>
 
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js" async></script>
     <span id="forkongithub"><a href="https://goo.gl/2oDsTg" target="_blank">Fork me on GitHub</a></span>
     <div class="container {{wrapperClass}}">
       <div class="row">
