drop goo.gl shorten url

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,12 +29,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/orange/pace-theme-minimal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/app-loading/0.0.51/app-loading.min.css">
     <link rel="dns-prefetch" href="//cdn.carbonads.com" />
-    <link rel="dns-prefetch" href="//goo.gl" />
   </head>
 
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js" async></script>
-    <span id="forkongithub"><a href="https://goo.gl/2oDsTg" target="_blank">Fork me on GitHub</a></span>
+    <span id="forkongithub"><a href="https://github.com/cdnjs/new-website" target="_blank">Fork me on GitHub</a></span>
     <div class="container {{wrapperClass}}">
       <div class="row">
         <div class="col-md-12">
