refactor webpage layout

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,10 +6,6 @@
 <html class="no-js" lang="en">
 <!--<![endif]-->
   <head>
-    <link rel="preconnect" href="//cdnjs.cloudflare.com" pr="1.0" />
-    <link rel="preconnect" href="//www.algolia.com" pr="0.85" />
-    <link rel="dns-prefetch" href="//static.getclicky.com" />
-    <link rel="dns-prefetch" href="//www.google-analytics.com" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{title}}</title>
@@ -18,17 +14,21 @@
     <meta property="og:url" content="https://cdnjs.com{{{url}}}" />
     <meta property="og:image" content="/img/logotext.png" />
     <meta property="og:description" content="{{description}}" />
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="{{description}}">
-    <meta name="keywords" content="{{keywords}}">
-    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/united/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/theme.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/orange/pace-theme-minimal.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/app-loading/0.0.51/app-loading.min.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="description" content="{{description}}" />
+    <meta name="keywords" content="{{keywords}}" />
+    <link rel="preconnect" href="//cdnjs.cloudflare.com" pr="1.0" />
+    <link rel="preconnect" href="//www.algolia.com" pr="0.85" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/united/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/css/theme.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/orange/pace-theme-minimal.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/app-loading/0.0.51/app-loading.min.css" />
     <link rel="dns-prefetch" href="//cdn.carbonads.com" />
+    <link rel="dns-prefetch" href="//static.getclicky.com" />
+    <link rel="dns-prefetch" href="//www.google-analytics.com" />
+    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs" />
   </head>
 
   <body>
