use minified pace css file

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
     <meta name="keywords" content="{{keywords}}" />
     <link rel="preconnect" href="//cdnjs.cloudflare.com" pr="1.0" />
     <link rel="preconnect" href="//www.algolia.com" pr="0.85" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/orange/pace-theme-minimal.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/orange/pace-theme-minimal.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js" async></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/united/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" />
