--- a/templates/layout.html
+++ b/templates/layout.html
@@ -73,7 +73,7 @@
             <li class="">
               <div class="btn-group">
                 <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                  gource
+                  source
                 <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
