update ribbon to "Donate CDNJS!"

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
   </head>
 
   <body>
-    <span id="forkongithub"><a href="https://github.com/cdnjs/new-website" target="_blank">Fork me on GitHub</a></span>
+  <span id="forkongithub"><a href="https://www.bountysource.com/teams/cdnjs" target="_blank">Donate CDNJS!</a></span>
     <div class="container {{wrapperClass}}">
       <div class="row">
         <div class="col-md-12">
