--- a/public/css/theme.less
+++ b/public/css/theme.less
@@ -1,81 +1,13 @@
 /*fork me on GitHub*/
-#forkongithub a {
-  background: #dd4814;
-  color: #fff;
-  text-decoration: none;
-  font-family: arial, sans-serif;
-  text-align: center;
-  font-weight: bold;
-  padding: 5px 40px;
-  font-size: 1rem;
-  line-height: 2rem;
-  position: relative;
-  transition: 0.5s;
-}
-#forkongithub a:hover {
-  background: orange;
-  color: #fff;
-}
-#forkongithub a::before,
-#forkongithub a::after {
-  content: "";
-  width: 100%;
-  display: block;
-  position: absolute;
-  top: 1px;
-  left: 0;
-  height: 1px;
-  background: #fff;
-}
-#forkongithub a::after {
-  bottom: 1px;
-  top: auto;
-}
-@media screen and (min-width: 1333px) {
-  #forkongithub {
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 0;
-    width: 200px;
-    overflow: hidden;
-    height: 200px;
-    z-index: 9999;
-  }
-  #forkongithub a {
-    width: 200px;
-    position: absolute;
-    top: 30px;
-    left: -45px;
-    transform: rotate(315deg);
-    -webkit-transform: rotate(315deg);
-    -ms-transform: rotate(315deg);
-    -moz-transform: rotate(315deg);
-    -o-transform: rotate(315deg);
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8);
-  }
-}
+#forkongithub a{background:#dd4814;color:#fff;text-decoration:none;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}#forkongithub a:hover{background:orange;color:#fff;}#forkongithub a::before,#forkongithub a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff;}#forkongithub a::after{bottom:1px;top:auto;}@media screen and (min-width:1333px){#forkongithub{position:absolute;display:block;top:0;left:0;width:200px;overflow:hidden;height:200px;z-index:9999;}#forkongithub a{width:200px;position:absolute;top:30px;left:-45px;transform:rotate(315deg);-webkit-transform:rotate(315deg);-ms-transform:rotate(315deg);-moz-transform:rotate(315deg);-o-transform:rotate(315deg);box-shadow:4px 4px 10px rgba(0,0,0,0.8);}}
 /*gitter button*/
-.gitter-open-chat-button {
-  background-color: #dd4814;
-  bottom: 36px;
-}
-.btn {
-  font-size: inherit;
-  padding: 0px 0px;
-}
-.dropdown-menu > li > a,
-.btn:hover,
-.btn:focus,
-.btn.focus {
-  color: #dd4814;
-}
-.dropdown-menu {
-  min-width: 0px;
-}
-ul.dropdown-menu > li {
-  float: left;
-}
+.gitter-open-chat-button{background-color:#dd4814;bottom:36px}
+.btn {font-size: inherit;    padding: 0px 0px;}
+.dropdown-menu > li > a, .btn:hover, .btn:focus, .btn.focus {color:#dd4814}
+.dropdown-menu{ min-width: 0px; }
+ul.dropdown-menu > li { float: left; }
+
+
 html {
   position: relative;
   min-height: 100%;
@@ -90,16 +22,20 @@ a {
   width: 100%;
   background-color: #f5f5f5;
 }
+
 body {
   margin-bottom: 25px;
   overflow-y: scroll;
 }
+
 .page {
   padding-top: 15px;
 }
+
 .assets.active {
   display: block !important;
 }
+
 .copy-button-group {
   position: absolute;
   right: 10px;
@@ -114,12 +50,14 @@ body {
 .copy-options .js {
   display: none;
 }
-.js-type .copy-options .js {
+.js-type .copy-options  .js {
   display: block !important;
 }
-.css-type .copy-options .css {
+
+.css-type .copy-options  .css {
   display: block !important;
 }
+
 .library-container .add-favorite,
 .favorite .add-favorite {
   display: none;
@@ -130,15 +68,19 @@ body {
 .remove-favorite {
   display: none !important;
 }
-p#name a {
-  text-decoration: none;
-  font-family: arial, helvetica;
-  color: #007BA8;
-  font-weight: bold;
-  position: relative;
-  bottom: 8px;
+
+
+
+p#name a{
+    text-decoration: none;
+    font-family: arial, helvetica;
+    color: #007BA8;
+    font-weight: bold;
+    position: relative;
+    bottom: 8px;
 }
-p#date {
+
+p#date{
   position: relative;
   text-align: right;
   margin: 0 25px 15px 0;
@@ -146,25 +88,30 @@ p#date {
   font-size: 0.8em;
   color: #919191;
 }
+
 .packages-table-container tbody em {
   font-weight: bold;
   font-style: normal;
   background: #ffdead;
 }
+
 .packages-table-container tbody tr td:last-child {
   width: 60% !important;
 }
-.packages-table-container tbody tr .label-default.highlight,
-.label-highlight {
+
+.packages-table-container tbody tr .label-default.highlight, .label-highlight {
   background-color: #575552;
 }
+
 .packages-table-container tbody tr .label-default.highlight em {
   color: #ffdead;
   background: none;
 }
+
 .label-highlight a {
   color: white !important;
-}
+ }
+
 #carbonads {
   border: none !important;
   border-radius: 4px;
@@ -174,17 +121,19 @@ p#date {
   overflow: hidden;
   margin-bottom: 10px;
 }
-.carbon-text,
-.carbon-poweredby {
+
+.carbon-text, .carbon-poweredby {
   display: block!important;
   margin-left: 145px!important;
   font-size: 13px!important;
   line-height: 16px!important;
   color: #333333;
 }
+
 .carbon-poweredby {
   margin-top: 10px;
 }
+
 .carbon-img > img {
   float: left;
   display: inline;
@@ -199,15 +148,16 @@ p#date {
   padding: 10px;
   font-size: 20px;
   height: 55px;
+
   box-shadow: none;
   -webkit-box-shadow: none;
   border-color: none;
-}
-#search-box:focus {
-  outline: 0;
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  border-color: none;
+  &:focus {
+    outline: 0;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    border-color: none;
+  }
 }
 .container.home {
   margin-top: 200px;
@@ -233,6 +183,7 @@ p#date {
   font-weight: 600;
   font-size: 23px;
 }
+
 .version-dropdown {
   margin-top: 20px;
 }
