--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,104 +22,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/united/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/theme.css">
-    <link rel="stylesheet" href="/css/main.css">
     <link rel="dns-prefetch" href="//cdn.carbonads.com" />
     <link rel="dns-prefetch" href="//goo.gl" />
   </head>
 
   <body>
-    <span id="forkongithub"><a href="https://goo.gl/2oDsTg" target="_blank">Fork me on GitHub</a></span>
     <div class="container {{wrapperClass}}">
       <div class="row">
         <div class="col-md-12">
           <ul class="menu">
             <li class="logo"><a href="/">cdnjs</a></li>
-            <li><a href="https://goo.gl/VBLhp9" target="_blank">Request a lib</a></li>
-            <li><a href="https://gitter.im/cdnjs/cdnjs" target="_blank">Chat</a></li>
-            <li><a href="https://www.cloudflare.com/network-map" target="_blank">Network</a></li>
+            <!-- <li><a href="https://goo.gl/VBLhp9" target="_blank">Request a lib</a></li> -->
+            <!-- <li><a href="https://gitter.im/cdnjs/cdnjs" target="_blank">Chat</a></li> -->
+            <!-- <li><a href="https://www.cloudflare.com/network-map" target="_blank">Network</a></li> -->
             <li><a href="http://stats.pingdom.com/4jg86a2wqei0" target="_blank">Uptime</a></li>
-           <!-- <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">Plugins</a></li>-->
-            <li class="">
-              <div class="btn-group">
-                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                  git stats
-                <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-header">main repo</li>
-                  <li><a href="/git_stats/cdnjs/general.html" title="~201604" target="_blank">git_stats</a></li>
-                  <li><a href="/gitstats/cdnjs/" title="~201604" target="_blank">gitstats</a></li>
-                  <li class="dropdown-header">new-website</li>
-                  <li><a href="/git_stats/new-website/general.html" title="~201604" target="_blank">git_stats</a></li>
-                  <li><a href="/gitstats/new-website/" title="~201604" target="_blank">gitstats</a></li>
-                  <li class="dropdown-header">auto-updater</li>
-                  <li><a href="/git_stats/autoupdate/general.html" title="~201602" target="_blank">git_stats</a></li>
-                  <li><a href="/gitstats/autoupdate/" title="~201602" target="_blank">gitstats</a></li>
-                  <li class="dropdown-header">importer</li>
-                  <li><a href="/git_stats/cdnjs-importer/general.html" title="~201602" target="_blank">git_stats</a></li>
-                  <li><a href="/gitstats/cdnjs-importer/" title="~201602" target="_blank">gitstats</a></li>
-                  <li class="dropdown-header">buildScript</li>
-                  <li><a href="/git_stats/buildScript/general.html" title="~201602" target="_blank">git_stats</a></li>
-                  <li><a href="/gitstats/buildScript/" title="~201602" target="_blank">gitstats</a></li>
-                  <li class="dropdown-header">atom-extension</li>
-                  <li><a href="/git_stats/atom-extension/general.html" title="~201602" target="_blank">git_stats</a></li>
-                  <li><a href="/gitstats/atom-extension/" title="~201602" target="_blank">gitstats</a></li>
-                  <li class="dropdown-header">tutorials</li>
-                  <li><a href="/git_stats/tutorials/general.html" title="~201602" target="_blank">git_stats</a></li>
-                  <li><a href="/gitstats/tutorials/" title="~201602" target="_blank">gitstats</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="">
-              <div class="btn-group">
-                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                  gource
-                <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a href="https://youtu.be/ehwK-KM4uYQ" target="_blank">main repo</a></li>
-                  <li><a href="https://youtu.be/GLH7Ovzi5z8" target="_blank">new-website</a></li>
-                  <li><a href="https://youtu.be/Xe5s7fQQdwc" target="_blank">auto-updater</a></li>
-                  <li><a href="https://youtu.be/RUYALTcLkyU" target="_blank">importer</a></li>
-                  <li><a href="https://youtu.be/kc0DZWJAZm4" target="_blank">buildScript</a></li>
-                  <li><a href="https://youtu.be/OHQC1saKU_A" target="_blank">atom-extension</a></li>
-                  <li><a href="https://youtu.be/T6ZoTbRX1-A" target="_blank">tutorials</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="">
-              <div class="btn-group">
-                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                  Support us!
-                <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a href="https://www.bountysource.com/teams/cdnjs" target="_blank">via Bountysource</a></li>
-                  <li><a href="https://gratipay.com/cdnjs/" target="_blank">via Gratipay</a></li>
-                  <li><a href="https://tip4commit.com/github/cdnjs/cdnjs" target="_blank">via tip4commit</a></li>
-                  <li><a href="https://twitter.com/cdnjs" target="_blank">Contact us!</a></li>
-                </ul>
-              </div>
-            </li>
-            <li><a href="/libraries">Browse Libraries</a></li>
+            <!-- <li><a href="/libraries">Browse Libraries</a></li> -->
             <li><a href="/about">About</a></li>
-            </ul>
+          </ul>
        </div>
-       </div>
-
+      </div>
   </div>
 
-    <div class="page">
-      {{{page}}}
+  <div class="page">
+    {{{page}}}
+  </div>
 
-    </div>
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">
-          Follow <a href="https://github.com/PeterDaveHello"><i class="fa fa-github"></i></a> <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=peterdavehello&tw_p=followbutton"><i class="fa fa-twitter"></i></a> <a href="https://www.peterdavehello.org">@Peter Dave Hello</a> and <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=cdnjs&tw_p=followbutton"><i class="fa fa-twitter"></i>@cdnjs</a> on GitHub and twitter to get latest news about cdnjs!
-        </p>
-      </div>
-    </footer>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js" defer></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js" defer></script>
@@ -128,10 +55,6 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js" defer></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/algoliasearch/3.10.2/algoliasearch.min.js" defer></script>
   <script src="/js/main.js" defer></script>
-
-    <script src="//static.getclicky.com/js" defer></script>
-    <script type="text/javascript" defer>try{clicky.init(66376315);}catch(err){}</script>
-    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66376315ns.gif" /></p></noscript>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -141,23 +64,16 @@
       ga('require', 'linkid', 'linkid.js');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
-if($('.post').length > 0) {
-  $('.menu').parent().removeClass('col-md-12').addClass('col-md-10 col-md-offset-1');
-};
+      if($('.post').length > 0) {
+        $('.menu').parent().removeClass('col-md-12').addClass('col-md-10 col-md-offset-1');
+      };
 
-$('.post > p, .post  > h1, .post > h2, .post > ul, .post > h3, .post > blockquote').wrap('<div class="container"><div class="row"><div class="col-md-10 col-md-offset-1">');
-$('.post > pre > code').wrapInner('<div class="container"><div class="row"><div class="col-md-10 col-md-offset-1">');
-$('.post code').addClass('hljs');
-$('.post').show();
+      $('.post > p, .post  > h1, .post > h2, .post > ul, .post > h3, .post > blockquote').wrap('<div class="container"><div class="row"><div class="col-md-10 col-md-offset-1">');
+      $('.post > pre > code').wrapInner('<div class="container"><div class="row"><div class="col-md-10 col-md-offset-1">');
+      $('.post code').addClass('hljs');
+      $('.post').show();
     </script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
-
 <script defer>hljs.initHighlightingOnLoad();</script>
-<script defer>
-  ((window.gitter = {}).chat = {}).options = {
-    room: 'cdnjs/cdnjs'
-  };
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gitter-sidecar/1.1.3/sidecar.js" async></script>
 </body>
 </html>
