--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6 col-md-offset-3">
     <p style="margin-top: 6px;">
-    
+
       <span>Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html">Google CDN</a><span>&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank">Microsoft runs their own CDN</a>.
       <br><span>The problem is, they only host the most popular libraries.</span>
       <br><span>We host all the popular libraries - JavaScript, CSS, SWF, images, etc!</span>
@@ -41,70 +41,62 @@
       <!--
                             <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
     </div>
-    <h3>Media</h3>
-    <div class="embed-responsive embed-responsive-16by9">
-      <iframe class="embed-responsive-item" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0&hd=1&vq=hd720" allowfullscreen></iframe>
-    </div>
-  </div>
-  <div class="col-md-6">
 
-    <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
-      <thead>
-        <tr>
-          <td><h3>Creators</h3></td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td style="width:300px;">
-            <a href="http://github.com/ryankirkman">
-              <img style="width: 50px; height: 50px;" src="/img/ryan.jpg" />
-              Ryan Kirkman
-            </a>
-            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/ryan_kirkman" data-show-count="false" data-lang="en">Follow @ryan_kirkman</a>
-          </td>
-          <td style="width: 300px;">
-            <a href="http://github.com/thomasdavis">
-              <img style="width: 50px; height: 50px;" alt="" src="/img/thomas.jpg" />
-              Thomas Davis
-            </a>
-            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/neutralthoughts" data-show-count="false" data-lang="en">Follow @neutralthoughts</a>
-          </td>
-        </tr>
-      </tbody>
-      <thead>
-        <tr>
-          <td><h3>Maintainers</h3></td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td style="width: 300px;">
-            <a href="https://github.com/PeterDaveHello">
-              <img style="width: 50px; height: 50px;" alt="Peter Dave Hello" src="/img/PeterDaveHello.jpg" />
-              Peter Dave Hello
-            </a>
-            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/peterdavehello" data-show-count="false" data-lang="en">Follow @peterdavehello</a>
-          </td>
-          <td style="width: 300px;">
-            <a href="http://decompile.it/blog/">
-              <img style="width: 50px; height: 50px;" alt="Drew Freyling" src="/img/drew.jpg" />
-              Drew Freyling
-            </a>
-            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/drewfreyling" data-show-count="false" data-lang="en">Follow @drewfreyling</a>
-          </td>
-          <td style="width: 300px;">
-            <a href="http://petecooper.org">
-              <img style="width: 50px; height: 50px;" alt="Pete Cooper" src="/img/pete.jpg" />
-              Pete Cooper
-            </a>
-            <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/petecooper" data-show-count="false" data-lang="en">Follow @petecooper</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+        <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
+          <thead>
+            <tr>
+              <td><h3>Creators</h3></td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td style="width:300px;">
+                <a href="http://github.com/ryankirkman">
+                  <img style="width: 50px; height: 50px;" src="/img/ryan.jpg" />
+                  Ryan Kirkman
+                </a>
+                <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/ryan_kirkman" data-show-count="false" data-lang="en">Follow @ryan_kirkman</a>
+              </td>
+              <td style="width: 300px;">
+                <a href="http://github.com/thomasdavis">
+                  <img style="width: 501px; height: 510px;" alt="" src="/img/thomas.jpg" />
+                  Thomas Davis
+                </a>
+                <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/neutralthoughts" data-show-count="false" data-lang="en">Follow @neutralthoughts</a>
+              </td>
+            </tr>
+          </tbody>
+          <thead>
+            <tr>
+              <td><h3>Maintainers</h3></td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td style="width: 300px;">
+                <a href="https://github.com/PeterDaveHello">
+                  <img style="width: 50px; height: 50px;" alt="Peter Dave Hello" src="/img/PeterDaveHello.jpg" />
+                  Peter Dave Hello
+                </a>
+                <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/peterdavehello" data-show-count="false" data-lang="en">Follow @peterdavehello</a>
+              </td>
+              <td style="width: 300px;">
+                <a href="http://decompile.it/blog/">
+                  <img style="width: 50px; height: 50px;" alt="Drew Freyling" src="/img/drew.jpg" />
+                  Drew Freyling
+                </a>
+                <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/drewfreyling" data-show-count="false" data-lang="en">Follow @drewfreyling</a>
+              </td>
+              <td style="width: 300px;">
+                <a href="http://petecooper.org">
+                  <img style="width: 50px; height: 50px;" alt="Pete Cooper" src="/img/pete.jpg" />
+                  Pete Cooper
+                </a>
+                <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/petecooper" data-show-count="false" data-lang="en">Follow @petecooper</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
   </div>
   </div>
 </div>
-
-    <script async>window.twttr=(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],t=window.twttr||{};if(d.getElementById(id))return t;js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);t._e=[];t.ready=function(f){t._e.push(f);};return t;}(document,"script","twitter-wjs"));</script>
