--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,248 @@
-/*fork me on GitHub*/
-#forkongithub a{background:#dd4814;color:#fff;text-decoration:none;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}#forkongithub a:hover{background:orange;color:#fff;}#forkongithub a::before,#forkongithub a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff;}#forkongithub a::after{bottom:1px;top:auto;}@media screen and (min-width:1333px){#forkongithub{position:absolute;display:block;top:0;left:0;width:200px;overflow:hidden;height:200px;z-index:9999;}#forkongithub a{width:200px;position:absolute;top:30px;left:-45px;transform:rotate(315deg);-webkit-transform:rotate(315deg);-ms-transform:rotate(315deg);-moz-transform:rotate(315deg);-o-transform:rotate(315deg);box-shadow:4px 4px 10px rgba(0,0,0,0.8);}}
-/*gitter button*/
-.gitter-open-chat-button{background-color:#dd4814;bottom:36px}
-.btn {font-size: inherit;    padding: 0px 0px;}
-.dropdown-menu > li > a, .btn:hover, .btn:focus, .btn.focus {color:#dd4814}
-.dropdown-menu{ min-width: 0px; }
-ul.dropdown-menu > li { float: left; }
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+html {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+body {
+  margin: 0;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block;
+}
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+  vertical-align: baseline;
+}
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+[hidden],
+template {
+  display: none;
+}
+a {
+  background-color: transparent;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+b,
+strong {
+  font-weight: bold;
+}
+dfn {
+  font-style: italic;
+}
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+mark {
+  background: #ff0;
+  color: #000;
+}
+small {
+  font-size: 80%;
+}
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sup {
+  top: -0.5em;
+}
+sub {
+  bottom: -0.25em;
+}
+img {
+  border: 0;
+}
+svg:not(:root) {
+  overflow: hidden;
+}
+figure {
+  margin: 1em 40px;
+}
+hr {
+  box-sizing: content-box;
+  height: 0;
+}
+pre {
+  overflow: auto;
+}
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: inherit;
+  font: inherit;
+  margin: 0;
+}
+button {
+  overflow: visible;
+}
+button,
+select {
+  text-transform: none;
+}
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer;
+}
+button[disabled],
+html input[disabled] {
+  cursor: default;
+}
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+input {
+  line-height: normal;
+}
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+input[type="search"] {
+  -webkit-appearance: textfield;
+  box-sizing: content-box;
+}
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+legend {
+  border: 0;
+  padding: 0;
+}
+textarea {
+  overflow: auto;
+}
+optgroup {
+  font-weight: bold;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+td,
+th {
+  padding: 0;
+}
+body,
+html {
+  font-size: 18px;
+  line-height: 24.3px;
+  color: #444;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 500;
+  -webkit-font-smoothing: antialiased;
+}
+#search-box {
+  width: 100%;
+  padding: 20px;
+  height: 55px;
+  margin-bottom: 20px;
+}
+#search-box:focus {
+  outline: none;
+  border: 1px solid #ff5000;
+}
+.Menu {
+  list-style: none;
+  padding: 0 20px;
+  margin: 0;
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  color: #ff5000;
+}
+.Menu li {
+  float: right;
+}
+.Menu li a {
+  color: #ff5000;
+  text-decoration: none;
+}
+.Menu__logo {
+  float: left !important;
+  font-size: 24px;
+  font-weight: 700;
+}
+.Menu__item {
+  margin-left: 15px;
+}
+.search-result {
+  padding: 20px;
+}
+.search-result:hover {
+  background: #fff6f2;
+}
+.search-result .library-name {
+  font-weight: bold;
+  display: inline-block;
+}
+.search-result .library-stars {
+  display: inline-block;
+}
+.search-result .library-url {
+  font-size: 14px;
+}
+.container {
+  width: 800px;
+  margin: auto;
+}
