--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,23 +1,24 @@
-/*fork me on GitHub*/
+a {
+  color: #fff; }
+
 #forkongithub a {
   background: #dd4814;
   color: #fff;
   text-decoration: none;
-  font-family: arial, sans-serif;
+  font-family: arial,sans-serif;
   text-align: center;
   font-weight: bold;
   padding: 5px 40px;
   font-size: 1rem;
   line-height: 2rem;
   position: relative;
-  transition: 0.5s;
-}
+  transition: 0.5s; }
+
 #forkongithub a:hover {
   background: orange;
-  color: #fff;
-}
-#forkongithub a::before,
-#forkongithub a::after {
+  color: #fff; }
+
+#forkongithub a::before, #forkongithub a::after {
   content: "";
   width: 100%;
   display: block;
@@ -25,12 +26,12 @@
   top: 1px;
   left: 0;
   height: 1px;
-  background: #fff;
-}
+  background: #fff; }
+
 #forkongithub a::after {
   bottom: 1px;
-  top: auto;
-}
+  top: auto; }
+
 @media screen and (min-width: 1333px) {
   #forkongithub {
     position: absolute;
@@ -40,8 +41,8 @@
     width: 200px;
     overflow: hidden;
     height: 200px;
-    z-index: 9999;
-  }
+    z-index: 9999; }
+
   #forkongithub a {
     width: 200px;
     position: absolute;
@@ -52,145 +53,138 @@
     -ms-transform: rotate(315deg);
     -moz-transform: rotate(315deg);
     -o-transform: rotate(315deg);
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8);
-  }
-}
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8); } }
 /*gitter button*/
 .gitter-open-chat-button {
   background-color: #dd4814;
-  bottom: 36px;
-}
+  bottom: 36px; }
+
 .btn {
   font-size: inherit;
-  padding: 0px 0px;
-}
-.dropdown-menu > li > a,
-.btn:hover,
-.btn:focus,
-.btn.focus {
-  color: #dd4814;
-}
+  padding: 0px 0px; }
+
+.dropdown-menu > li > a, .btn:hover, .btn:focus, .btn.focus {
+  color: #dd4814; }
+
 .dropdown-menu {
-  min-width: 0px;
-}
+  min-width: 0px; }
+
 ul.dropdown-menu > li {
-  float: left;
-}
+  float: left; }
+
 html {
   position: relative;
-  min-height: 100%;
-}
+  min-height: 100%; }
+
 a {
-  color: #dd4814;
-}
+  color: #dd4814; }
+
 .footer {
   position: absolute;
   bottom: 0;
   padding-top: 7px;
   width: 100%;
-  background-color: #f5f5f5;
-}
+  background-color: #f5f5f5; }
+
 body {
   margin-bottom: 25px;
-  overflow-y: scroll;
-}
+  overflow-y: scroll; }
+
 .page {
-  padding-top: 15px;
-}
+  padding-top: 15px; }
+
 .assets.active {
-  display: block !important;
-}
+  display: block !important; }
+
 .copy-button-group {
   position: absolute;
   right: 10px;
-  top: 2px;
-}
+  top: 2px; }
+
 .copy-options li {
-  width: 100%;
-}
+  width: 100%; }
+
 .copy-options .css {
-  display: none;
-}
+  display: none; }
+
 .copy-options .js {
-  display: none;
-}
+  display: none; }
+
 .js-type .copy-options .js {
-  display: block !important;
-}
+  display: block !important; }
+
 .css-type .copy-options .css {
-  display: block !important;
-}
+  display: block !important; }
+
 .library-container .add-favorite,
 .favorite .add-favorite {
-  display: none;
-}
+  display: none; }
+
 .favorite .remove-favorite {
-  display: block !important;
-}
+  display: block !important; }
+
 .remove-favorite {
-  display: none !important;
-}
+  display: none !important; }
+
 p#name a {
   text-decoration: none;
   font-family: arial, helvetica;
   color: #007BA8;
   font-weight: bold;
   position: relative;
-  bottom: 8px;
-}
+  bottom: 8px; }
+
 p#date {
   position: relative;
   text-align: right;
   margin: 0 25px 15px 0;
   font-family: helvetica;
   font-size: 0.8em;
-  color: #919191;
-}
+  color: #919191; }
+
 .packages-table-container tbody em {
   font-weight: bold;
   font-style: normal;
-  background: #ffdead;
-}
+  background: #ffdead; }
+
 .packages-table-container tbody tr td:last-child {
-  width: 60% !important;
-}
-.packages-table-container tbody tr .label-default.highlight,
-.label-highlight {
-  background-color: #575552;
-}
+  width: 60% !important; }
+
+.packages-table-container tbody tr .label-default.highlight, .label-highlight {
+  background-color: #575552; }
+
 .packages-table-container tbody tr .label-default.highlight em {
   color: #ffdead;
-  background: none;
-}
+  background: none; }
+
 .label-highlight a {
-  color: white !important;
-}
+  color: white !important; }
+
 #carbonads {
   border: none !important;
   border-radius: 4px;
-  width: 330px!important;
-  height: auto!important;
-  padding: 15px!important;
+  width: 330px !important;
+  height: auto !important;
+  padding: 15px !important;
   overflow: hidden;
-  margin-bottom: 10px;
-}
-.carbon-text,
+  margin-bottom: 10px; }
+
+.carbon-text, .carbon-poweredby {
+  display: block !important;
+  margin-left: 145px !important;
+  font-size: 13px !important;
+  line-height: 16px !important;
+  color: #333333; }
+
 .carbon-poweredby {
-  display: block!important;
-  margin-left: 145px!important;
-  font-size: 13px!important;
-  line-height: 16px!important;
-  color: #333333;
-}
-.carbon-poweredby {
-  margin-top: 10px;
-}
+  margin-top: 10px; }
+
 .carbon-img > img {
   float: left;
   display: inline;
   width: 130px;
-  height: 100px;
-}
+  height: 100px; }
+
 #search-box {
   margin: 0px 0 15px 0;
   outline: 0;
@@ -201,38 +195,38 @@ p#date {
   height: 55px;
   box-shadow: none;
   -webkit-box-shadow: none;
-  border-color: none;
-}
-#search-box:focus {
-  outline: 0;
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  border-color: none;
-}
+  border-color: none; }
+  #search-box:focus {
+    outline: 0;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    border-color: none; }
+
 .container.home {
-  margin-top: 200px;
-}
+  margin-top: 200px; }
+
 .menu {
   list-style: none;
   padding: 0;
   margin: 0;
   margin-bottom: 10px;
   margin-top: 20px;
-  width: 100%;
-}
+  width: 100%; }
+
 .menu li {
   float: right;
   margin-left: 15px;
-  font-size: 20px;
-}
+  font-size: 20px; }
+
 .logo {
   float: left !important;
-  margin-left: 0 !important;
-}
+  margin-left: 0 !important; }
+
 .logo a {
   font-weight: 600;
-  font-size: 23px;
-}
+  font-size: 23px; }
+
 .version-dropdown {
-  margin-top: 20px;
-}
+  margin-top: 20px; }
+
+/*# sourceMappingURL=theme.css.map */
