--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,28 +19,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="{{description}}">
     <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/united/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/theme.css">
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="dns-prefetch" href="//cdn.carbonads.com" />
     <link rel="dns-prefetch" href="//goo.gl" />
   </head>
 
   <body>
     <div class="container {{wrapperClass}}">
-      <div class="row">
-        <div class="col-md-12">
-          <ul class="menu">
-            <li class="logo"><a href="/">cdnjs</a></li>
-            <!-- <li><a href="https://goo.gl/VBLhp9" target="_blank">Request a lib</a></li> -->
-            <!-- <li><a href="https://gitter.im/cdnjs/cdnjs" target="_blank">Chat</a></li> -->
-            <!-- <li><a href="https://www.cloudflare.com/network-map" target="_blank">Network</a></li> -->
-            <li><a href="http://stats.pingdom.com/4jg86a2wqei0" target="_blank">Uptime</a></li>
-            <!-- <li><a href="/libraries">Browse Libraries</a></li> -->
-            <li><a href="/about">About</a></li>
-          </ul>
-       </div>
-      </div>
+      <ul class="Menu">
+        <li class="Menu__logo"><a href="/">cdnjs</a></li>
+        <li><a class="Menu__item"  href="http://stats.pingdom.com/4jg86a2wqei0" target="_blank">Uptime</a></li>
+        <li><a class="Menu__item" href="/about">About</a></li>
+      </ul>
   </div>
 
   <div class="page">
@@ -75,5 +65,6 @@
     </script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
 <script defer>hljs.initHighlightingOnLoad();</script>
+
 </body>
 </html>
