--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,6 +66,6 @@
     </script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
 <script defer>hljs.initHighlightingOnLoad();</script>
-
+<div class="hired-banner"></div>
 </body>
 </html>
