--- a/templates/library.html
+++ b/templates/library.html
@@ -6,32 +6,34 @@
       <div class="row">
         <div class="col-md-8">
 
-    <h1 style="margin-top: 00px;">{{library.name}}</h1>
+    <h1 class="library-name">{{library.name}}</h1>
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
       <span id="library-name" style="display: none;" hidden>{{library.name}}</span>
-      <p>
-        <li class="label" style="color:Black">Links/Tags:</li>
+      <p>{{library.description}}</p>
+      <ul class="library-labels">
+        <!-- <li class="label" style="color:Black">Links/Tags:</li> -->
         <li class="label label-default label-highlight"><a href="https://github.com/cdnjs/cdnjs/commits/master/ajax/libs/{{library.name}}" title="Commit history of {{library.name}} on cdnjs">commits/history</a></li>&nbsp;
-        <li class="label label-default label-highlight"><a href="https://api.cdnjs.com/libraries/{{library.name}}" title="api url of {{library.name}} on cdnjs">cdnjs api</a>&nbsp;<a href="https://api.cdnjs.com/libraries/{{library.name}}?output=human" title="Human readable api output of {{library.name}}">&nbsp;<i class="fa fa-user"></i></a></li>&nbsp;
-        <a href="{{library.autoupdate.url}}" title="{{library.name}} has auto-update config, this is the link to upstream, click to checkout lastest version on official page."><li class="label label-default label-highlight">{{library.autoupdate.string}}</li></a>
+        <li class="label label-default label-highlight"><a href="https://api.cdnjs.com/libraries/{{library.name}}" title="api url of {{library.name}} on cdnjs">cdnjs api</a>
+          <!-- <a href="https://api.cdnjs.com/libraries/{{library.name}}?output=human" title="Human readable api output of {{library.name}}">&nbsp;<i class="fa fa-user"></i></a> -->
+        </li>&nbsp;
+        <li class="label label-default label-highlight"><a href="{{library.autoupdate.url}}" title="{{library.name}} has auto-update config, this is the link to upstream, click to checkout lastest version on official page.">{{library.autoupdate.string}}</a></li>
         {{#library.urls}}
         &nbsp;<li class="label label-default label-highlight"><a href="{{url}}" title="Link to {{library.name}}'s source code page.">repository</a></li>
         {{/library.urls}}
         {{#licenses}}<li class="label label-default label-highlight"><a href="{{url}}" title="License info of {{library.name}}, click to see datail.">{{type}} license</a>&nbsp;</li>{{/licenses}}
-      </p>
-      <p>{{library.description}}</p>
-      <em>{{library.keywords}}</em>
+      </ul>
 
       <br />
       {{#library.gratipay}}
       <a href="https://gratipay.com/{{library.gratipay}}/"><img src="https://img.shields.io/gratipay/{{library.gratipay}}.svg" /></a>
       {{/library.gratipay}}
         </div>
-    
+
       </div>
+      <div class="library-divider"></div>
        <div class="input-group version-dropdown">
-      <div class="input-group-addon">Version</div>
-      <select class="form-control version-selector" style="float: right;">
+      <span class="input-group-addon">Version</span>
+      <select class="form-control version-selector">
         {{#assets}}<option value="{{version}}" {{selected}}>{{version}}</option>{{/assets}}
       </select>
         </div>
@@ -44,7 +46,7 @@
               {{#files}}
               <tr class="library {{fileType}}-type">
                 <td class="library-column"  data-lib-name="{{library.name}}" style="position: relative;">
-                  <p class='library-url'>https://cdnjs.cloudflare.com/ajax/libs/{{library.originalName}}/{{version}}/{{name}}</p>
+                  <div class='library-url'>https://cdnjs.cloudflare.com/ajax/libs/{{library.originalName}}/{{version}}/{{name}}</div>
                 </td>
               </tr>
               {{/files}}
@@ -52,9 +54,10 @@
           </table>
         </div>
       {{/selectedAssets}}
-        <h3>Related Tutorials</h3>
+      <div class="library-divider"></div>
+        <div>Tutorials</div>
 
-            <p style="margin-bottom: 50px;">Help us write awesome web development tutorials! <a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own community driven tutorials.</a></p>
+            <p><a href="https://github.com/cdnjs/tutorials" target="_blank">Submit your own web development tutorials for the libraries on cdnjs!</a></p>
       {{#tutorialsPresent}}
             <table class="table table-hover" style="margin-top: 25px;">
                 <thead>
