--- a/src/css/theme.less
+++ b/src/css/theme.less
@@ -3,6 +3,7 @@
 // }
 body {
   overflow-y: scroll;
+  padding-bottom: 80px;
 }
 #search-box {
   width: 100%;
@@ -84,6 +85,18 @@ body {
   background: #f2f2f2;
   bottom: 0;
   left: 0;
+  .container {
+    padding: 0 20px;
+  }
+  .hired-logo {
+    float: left;
+    line-height: 60px;
+    font-weight: bold;
+  }
+  .hired-promo {
+    float: right;
+    line-height: 60px;
+  }
 }
 .library-container {
   margin-top: 70px;
@@ -149,6 +162,7 @@ body {
   }
 }
 .assets {
+  margin-bottom: 60px;
   table {
     width: 100%;
   }
