--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,6 +66,12 @@
     </script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
 <script defer>hljs.initHighlightingOnLoad();</script>
-<div class="hired-banner"></div>
+<div class="hired-banner">
+  <div class="container">
+    <span class="hired-logo">HIRED</span>
+    <span class="hired-promo">Are you a developer? We bring job offers to you.</span>
+  </div>
+
+</div>
 </body>
 </html>
