--- a/src/css/theme.less
+++ b/src/css/theme.less
@@ -18,7 +18,7 @@ body {
 
 // When on homepage
 .container.home {
-  // margin-top: 200px;
+  margin-top: 200px;
 }
 
 .Menu {
@@ -158,7 +158,7 @@ body {
   margin: 0;
   width: 100%;
   &:hover {
-    background: #f1f1f1;
+    // background: #f1f1f1;
   }
 }
 .assets {
