--- a/src/css/theme.less
+++ b/src/css/theme.less
@@ -47,6 +47,7 @@ body {
 }
 .search-result {
   padding: 20px;
+  position: relative;
   &:hover {
     background: #fff6f2;
   }
@@ -148,6 +149,7 @@ body {
     margin-left: 10px;
     line-height: 38px;
     height: 38px;
+    outline: none;
   }
 }
 .library-url {
@@ -165,5 +167,31 @@ body {
   margin-bottom: 60px;
   table {
     width: 100%;
+  }
+}
+.copy-button-container {
+  position: absolute;
+  right: 20px;
+  top: 40px;
+  color: #fff;
+  height: 30px;
+  .copy-button {
+    line-height: 30px;
+    background: @color-brand;
+    border: 0;
+    padding: 10px 5px 10px 10px;
+    border-top-left-radius: 9px;
+    border-bottom-left-radius: 9px;
+    outline: 0;
+  }
+  .copy-button-trigger {
+      line-height: 30px;
+      background: @color-brand;
+      outline: 0;
+      font-size: 16px !important;
+      border: 0;
+      padding: 10px 10px 10px 5px;
+      border-top-right-radius: 9px;
+      border-bottom-right-radius: 9px;
   }
 }
