--- a/templates/layout.html
+++ b/templates/layout.html
@@ -70,6 +70,9 @@
   <div class="container">
     <span class="hired-logo">HIRED</span>
     <span class="hired-promo">Are you a developer? We bring job offers to you.</span>
+    <!-- <div style="position: relative;">
+      <span class="octicon octicon-triangle-up banner-expand"></span>
+    </div> -->
   </div>
 
 </div>
