--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,10 +66,33 @@
     </script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
 <script defer>hljs.initHighlightingOnLoad();</script>
-<div class="hired-banner">
+<div class="hired-banner maximised">
+  <div style="position: relative; height: 0;">
+    <div class="hired-triangle"></div>
+  </div>
   <div class="container">
-    <span class="hired-logo">HIRED</span>
-    <span class="hired-promo">Are you a developer? We bring job offers to you.</span>
+    <div class="header">
+      <span class="hired-logo">HIRED</span>
+      <span class="hired-promo">Are you a developer? We bring job offers to you<span class="octicon octicon-plus-small banner-expand"></span></span>
+    </div>
+    <div class="hired-content">
+      <div style="clear: both;"></div>
+      <div class="first-pitch">We Bring Job Offers To You</div>
+<div class="first-copy">FREE For Candidates. Salaries from $75,000 to $200,000</div>
+<input class="email-input" />
+<input type="submit" class="get-job-offers" value="GET JOB OFFERS" />
+<p class="hired-privacy">By entering your email address, you are agreeing to Hired's Terms of Service and Privacy Policy.</p>
+<div class="hired-divider">
+      <div class="xs-mrlauto xs-11of12 sm-8of12 md-6of12">
+<div class="how-it-works" id="how-it-works-title">How It Works</div>
+<ol class="list-numbered">
+<li class="xs-delta" id="how-it-works-first">Answer a Few Questions</li>
+<li class="xs-delta" id="how-it-works-second">Companies Send You Offers with Salary Details Upfront</li>
+<li class="xs-delta" id="how-it-works-third">Your Profile is Hidden from Current and Previous Employers</li>
+<li class="xs-delta" id="how-it-works-fourth">Find a Job and Get a $1000 Bonus From Hired</li>
+</ol>
+</div>
+    </div>
     <!-- <div style="position: relative;">
       <span class="octicon octicon-triangle-up banner-expand"></span>
     </div> -->
