--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,9 +66,10 @@
     </script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
 <script defer>hljs.initHighlightingOnLoad();</script>
-<div class="hired-banner maximised">
+<div class="hired-banner">
   <div style="position: relative; height: 0;">
     <div class="hired-triangle"></div>
+    <span class="octicon octicon-x close-banner"></span>
   </div>
   <div class="container">
     <div class="header">
@@ -91,6 +92,8 @@
 <li class="xs-delta" id="how-it-works-third">Your Profile is Hidden from Current and Previous Employers</li>
 <li class="xs-delta" id="how-it-works-fourth">Find a Job and Get a $1000 Bonus From Hired</li>
 </ol>
+
+<a href="" class="learn-more">LEARN MORE</a>
 </div>
     </div>
     <!-- <div style="position: relative;">
