--- a/public/css/main.css
+++ b/public/css/main.css
@@ -391,28 +391,29 @@ body {
   width: 100%;
   background: #f2f2f2;
   bottom: 0;
-  transition: height ease-in 0.4s;
+  transition: height ease-in-out 0.4s;
   left: 0;
-  cursor: pointer;
 }
 .hired-banner .container {
   padding: 0 20px;
 }
-.hired-banner .hired-header {
-  background: #f2f2f2;
+.hired-banner .header {
+  cursor: pointer;
+  height: 50px;
 }
 .hired-banner .hired-logo {
   letter-spacing: 10px;
   float: left;
   line-height: 52px;
-  transition: all ease-in 0.4s;
+  transition: all ease-in 0.3s;
   font-weight: 500;
 }
 .hired-banner .hired-promo {
   float: right;
   font-weight: 300;
-  transition: opacity ease-in 0.4s;
+  transition: opacity ease-in 0.2s;
   line-height: 52px;
+  letter-spacing: 1px;
 }
 .hired-banner .first-pitch {
   text-align: center;
@@ -425,6 +426,8 @@ body {
 }
 .hired-banner.maximised {
   height: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 .hired-banner.maximised .hired-triangle {
   display: none;
@@ -438,6 +441,9 @@ body {
 .hired-banner.maximised .hired-promo {
   opacity: 0;
 }
+.hired-banner.maximised .close-banner {
+  opacity: 1;
+}
 .hired-banner .hired-privacy {
   font-size: 12px;
   color: #BABBC1;
@@ -446,15 +452,19 @@ body {
 .hired-banner .email-input {
   outline: 0;
   border: 0;
-  font-size: 1.2rem;
-  line-height: 2rem;
-  height: 3rem;
   padding: 15px 15px;
   border-radius: 0.2rem;
   width: 500px;
   margin: auto;
   display: block;
+  height: 55px;
+  line-height: 55px;
   border: 1px solid #BABBC1;
+  font-size: 18px;
+  /* text-align: center; */
+  font-family: GothamSSM;
+  /* font-weight: 300; */
+  color: #666;
 }
 .hired-banner .email-input:hover {
   border: 1px solid #787985;
@@ -478,6 +488,27 @@ body {
 .hired-banner .get-job-offers:hover {
   background: #55c9a9;
 }
+.hired-banner .learn-more {
+  width: 500px;
+  margin: auto;
+  display: block;
+  background: #36373E;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  border: 0;
+  border-radius: 3px;
+  font-size: 20px;
+  font-weight: 400;
+  height: 50px;
+  line-height: 40px;
+  padding-bottom: 10px;
+  5letter-spacing: 2px;
+  margin-top: 10px;
+}
+.hired-banner .learn-more:hover {
+  background: #383940;
+}
 .hired-banner:hover .hired-triangle {
   margin-left: -20px;
 }
@@ -500,9 +531,10 @@ body {
 .hired-banner .list-numbered {
   list-style: none;
   counter-reset: line;
-  width: 500px;
   margin: auto;
   margin-left: 50px;
+  font-weight: 300;
+  font-size: 18px;
 }
 .hired-banner .list-numbered > li {
   position: relative;
@@ -514,7 +546,6 @@ body {
   border-radius: 10rem;
   color: #FFFFFF;
   display: inline-block;
-  height: 2.4rem;
   left: 0;
   line-height: 2rem;
   margin-left: -3.6rem;
@@ -532,4 +563,18 @@ body {
   font-size: 30px;
   margin-top: 30px;
   margin-bottom: 30px;
+}
+.hired-banner .close-banner {
+  opacity: 0;
+  transition: opacity ease-in 1s;
+  width: 50px;
+  height: 50px;
+  color: #000;
+  z-index: 100000000000;
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  font-size: 70px !important;
+  color: #ccc;
+  cursor: pointer;
 }
