add id="libraryName" for library name h1 tag

--- a/templates/library.html
+++ b/templates/library.html
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-md-8">
 
-    <h1 style="margin-top: 00px;">{{library.name}}</h1>
+    <h1 style="margin-top: 00px;" id="libraryName">{{library.name}}</h1>
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
       <span id="library-name" style="display: none;" hidden>{{library.name}}</span>
       <p>
