--- a/templates/about.html
+++ b/templates/about.html
@@ -43,6 +43,11 @@
         <img alt="KeyCDN" style="margin-bottom: 20px;" src="/img/keycdn.svg" width="212" height="62" />
       </a>
       <p>KeyCDN is a high-performance CDN with a RESTful API ideal for developers. The CDN offers real-time stats and raw logs. Free custom SSL is available based on Let's Encrypt. Instant purge makes sure that content is never outdated.</p>
+      <br />
+      <a href="https://www.digitalocean.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about">
+        <img alt="DigitalOcean" style="margin-bottom: 20px;" src="/img/digitalocean.png" width="363" height="62" />
+      </a>
+      <p>DigitalOcean is simplifying the cloud by providing an infrastructure experience that developers love. DigitalOcean is built on a foundation of open source software and proud to give back to community-driven projects like CDNJS.</p>
     </div>
     <h3>Media</h3>
     <div class="embed-responsive embed-responsive-16by9">
